Color Scheme Changed

--- a/app/src/main/res/layout/activity_change_mobile_otp.xml
+++ b/app/src/main/res/layout/activity_change_mobile_otp.xml
@@ -22,9 +22,9 @@
             <com.google.android.material.textview.MaterialTextView
                 android:text="@string/lwm_otp_title"
                 android:textAlignment="center"
+                android:textFontWeight="600"
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp"
-                android:textStyle="bold"
                 android:layout_marginVertical="32dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -34,15 +34,15 @@
                 android:id="@+id/cm_code"
                 android:inputType="phone"
                 android:digits="0123456789"
+                android:itemBackground="@color/colorBackground"
                 app:itemCount="6"
                 app:itemHeight="60dp"
                 app:itemSpacing="4dp"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
+                android:textFontWeight="600"
                 app:lineColor="@android:color/transparent"
-                app:cursorColor="@color/colorPrimary"
+                android:textColor="@color/colorSecondary"
+                app:cursorColor="@color/colorSecondary"
                 android:cursorVisible="true"
-                android:itemBackground="@color/colorFieldBG"
                 app:itemRadius="16dp"
                 app:viewType="rectangle"
                 android:layout_gravity="center_horizontal"
@@ -64,8 +64,8 @@
             <com.google.android.material.textview.MaterialTextView
                 android:text="@string/dont_receive_the_code"
                 android:textAlignment="center"
-                android:textColor="@color/colorText"
                 android:layout_marginTop="16dp"
+                android:textColor="@color/colorSecondary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
@@ -73,8 +73,8 @@
                 android:id="@+id/cm_resend_btn"
                 android:text="@string/resend_code"
                 android:textAlignment="center"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
+                android:textFontWeight="600"
+                android:textColor="@color/colorPrimaryDark"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="16dp"
                 android:layout_width="match_parent"
