--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content">
 
             <RelativeLayout
-                android:background="@color/common_google_signin_btn_text_dark_disabled"
+                android:background="#E6E6E6"
                 android:paddingTop="40dp"
                 android:paddingBottom="64dp"
                 android:layout_width="match_parent"
@@ -58,8 +58,8 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginBottom="16dp"
                 app:cardCornerRadius="16dp"
-                android:backgroundTint="@color/colorFieldBG"
                 app:cardElevation="0dp"
+                app:cardBackgroundColor="@color/colorBackground"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -73,7 +73,6 @@
                         style="@style/AppTheme.SwitchMaterial"
                         android:id="@+id/ep_donor"
                         android:text="@string/plasma_donate"
-                        android:textStyle="bold"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
 
