--- a/app/src/main/res/layout/fragment_doctor_about.xml
+++ b/app/src/main/res/layout/fragment_doctor_about.xml
@@ -14,24 +14,22 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:text="@string/qualification"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryLight"
+            android:textFontWeight="600"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dpa_qualification"
             android:text="@string/minus"
-            android:textColor="@color/colorText"
+            android:textColor="@color/colorSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:text="@string/specializations"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryLight"
+            android:textFontWeight="600"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -39,15 +37,14 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dpa_specializations"
             android:text="@string/minus"
-            android:textColor="@color/colorText"
+            android:textColor="@color/colorSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:text="@string/experience"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryLight"
+            android:textFontWeight="600"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -55,15 +52,14 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dpa_experience"
             android:text="@string/minus"
-            android:textColor="@color/colorText"
+            android:textColor="@color/colorSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:text="@string/fee"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryLight"
+            android:textFontWeight="600"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -71,15 +67,14 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dpa_fee"
             android:text="@string/minus"
-            android:textColor="@color/colorText"
+            android:textColor="@color/colorSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:text="@string/practice_time"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryLight"
+            android:textFontWeight="600"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -87,15 +82,14 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dpa_ptime"
             android:text="@string/minus"
-            android:textColor="@color/colorText"
+            android:textColor="@color/colorSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:text="@string/offdays"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryLight"
+            android:textFontWeight="600"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -103,15 +97,14 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dpa_offdays"
             android:text="@string/minus"
-            android:textColor="@color/colorText"
+            android:textColor="@color/colorSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:text="@string/hospital_name"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryLight"
+            android:textFontWeight="600"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -119,15 +112,14 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dpa_hname"
             android:text="@string/minus"
-            android:textColor="@color/colorText"
+            android:textColor="@color/colorSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:text="@string/hospital_thana"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryLight"
+            android:textFontWeight="600"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -135,15 +127,14 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dpa_hthana"
             android:text="@string/minus"
-            android:textColor="@color/colorText"
+            android:textColor="@color/colorSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:text="@string/hospital_district"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryLight"
+            android:textFontWeight="600"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -151,15 +142,14 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dpa_hdistrict"
             android:text="@string/minus"
-            android:textColor="@color/colorText"
+            android:textColor="@color/colorSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:text="@string/hospital_mobile"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryLight"
+            android:textFontWeight="600"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -167,7 +157,7 @@
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/dpa_hmobile"
             android:text="@string/minus"
-            android:textColor="@color/colorText"
+            android:textColor="@color/colorSecondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
