--- a/app/src/main/res/layout/layout_donor.xml
+++ b/app/src/main/res/layout/layout_donor.xml
@@ -16,9 +16,11 @@
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:src="@drawable/gr_avatar"
-        app:civ_border="false"
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        app:civ_border_width="4dp"
+        app:civ_border_color_end="#1A000000"
+        app:civ_border_color_direction="top_to_bottom"
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
 
     <LinearLayout
         android:layout_marginStart="16dp"
@@ -33,10 +35,10 @@
             android:id="@+id/plsmd_name"
             android:text="@string/minus"
             android:textSize="16sp"
-            android:textStyle="bold"
             android:maxLines="1"
             android:ellipsize="end"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorSecondary"
+            android:textFontWeight="600"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -44,12 +46,12 @@
             android:id="@+id/plsmd_mobile"
             android:text="@string/minus"
             android:drawableStart="@drawable/ic_mobile_12"
-            android:drawableTint="@android:color/secondary_text_light_nodisable"
+            android:drawableTint="@color/material_on_surface_disabled"
             android:drawablePadding="4dp"
             android:textSize="12sp"
             android:maxLines="1"
             android:ellipsize="end"
-            android:textColor="@android:color/secondary_text_light_nodisable"
+            android:textColor="@color/material_on_surface_disabled"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
