--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -20,10 +20,10 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/ac_holder"
-                android:textColor="@color/colorText"
                 android:justificationMode="inter_word"
                 android:text="@string/minus"
                 android:padding="16dp"
+                android:textColor="@color/colorSecondary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
