--- a/app/src/main/res/layout/activity_analysis_result.xml
+++ b/app/src/main/res/layout/activity_analysis_result.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:src="@drawable/gr_avatar"
+                android:src="@drawable/gr_risk_none"
                 android:id="@+id/rskar_photo"
                 android:layout_gravity="center"
                 android:layout_marginVertical="32dp"
@@ -31,9 +31,9 @@
                 android:id="@+id/rskar_content"
                 android:text="@string/minus"
                 android:justificationMode="inter_word"
+                android:textColor="@color/colorSecondary"
                 android:layout_marginBottom="16dp"
                 android:layout_marginHorizontal="16dp"
-                android:textColor="@color/colorText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
