--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,20 +10,35 @@
     android:layout_height="match_parent"
     tools:context=".splash.SplashActivity">
 
-    <ImageView
-        android:src="@drawable/gr_logo"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:contentDescription="@string/app_name"/>
-
-    <com.google.android.material.textview.MaterialTextView
-        android:text="@string/app_name"
-        android:textColor="@android:color/white"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:layout_marginTop="16dp"
-        android:textStyle="bold"
+    <com.facebook.shimmer.ShimmerFrameLayout
+        app:shimmer_intensity=".85"
+        app:shimmer_duration="1500"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:src="@drawable/gr_logo"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:contentDescription="@string/app_name"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:textSize="24sp" />
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 </LinearLayout>
