--- a/app/src/main/res/layout/fragment_analysis.xml
+++ b/app/src/main/res/layout/fragment_analysis.xml
@@ -19,10 +19,9 @@
             <com.google.android.material.textview.MaterialTextView
                 android:layout_marginTop="16dp"
                 android:layout_marginHorizontal="16dp"
-                android:textColor="@color/colorText"
                 android:textAlignment="center"
-                android:textStyle="bold"
                 android:text="@string/rska_note"
+                android:textColor="@color/colorSecondary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
