--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -2,7 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorFieldBG"
+    android:background="@color/colorBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".main.menu.MenuFragment">
@@ -42,10 +42,10 @@
                     android:id="@+id/menu_name"
                     android:text="@string/minus"
                     android:textSize="16sp"
-                    android:textStyle="bold"
                     android:maxLines="1"
                     android:ellipsize="end"
                     android:textColor="@color/colorPrimary"
+                    android:textStyle="bold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -55,7 +55,7 @@
                     android:textSize="12sp"
                     android:maxLines="1"
                     android:ellipsize="end"
-                    android:textColor="@color/colorText"
+                    android:textColor="@color/colorSecondary"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
