--- a/app/src/main/res/layout/layout_emergency.xml
+++ b/app/src/main/res/layout/layout_emergency.xml
@@ -14,8 +14,7 @@
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/emrg_name"
         android:text="@string/minus"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorSecondary"
         android:layout_marginStart="16dp"
         android:layout_weight="1"
         android:layout_width="0dp"
