--- a/app/src/main/res/layout/layout_nearby_doctor_y.xml
+++ b/app/src/main/res/layout/layout_nearby_doctor_y.xml
@@ -15,12 +15,14 @@
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:src="@drawable/gr_avatar"
-        app:civ_border="false"
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        app:civ_border_width="4dp"
+        app:civ_border_color_end="#1A000000"
+        app:civ_border_color_direction="top_to_bottom"
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
 
     <LinearLayout
-        android:layout_marginStart="16dp"
+        android:layout_marginHorizontal="16dp"
         android:orientation="vertical"
         android:layout_centerVertical="true"
         android:layout_toStartOf="@id/doc_item_icon"
@@ -32,10 +34,10 @@
             android:id="@+id/doc_name"
             android:text="@string/minus"
             android:textSize="16sp"
-            android:textStyle="bold"
             android:maxLines="1"
             android:ellipsize="end"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorSecondary"
+            android:textFontWeight="600"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -45,7 +47,7 @@
             android:textSize="12sp"
             android:maxLines="1"
             android:ellipsize="end"
-            android:textColor="@android:color/secondary_text_light_nodisable"
+            android:textColor="@color/material_on_surface_disabled"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -54,13 +56,12 @@
             android:text="@string/minus"
             android:textSize="12sp"
             android:maxLines="1"
-            android:textStyle="bold"
             android:layout_marginTop="2dp"
             android:drawableStart="@drawable/ic_hospital_12"
-            android:drawableTint="@android:color/secondary_text_light_nodisable"
+            android:drawableTint="@color/material_on_surface_disabled"
             android:drawablePadding="4dp"
             android:ellipsize="end"
-            android:textColor="@android:color/secondary_text_light_nodisable"
+            android:textColor="@color/material_on_surface_disabled"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
