--- a/app/src/main/res/layout/layout_onboarding.xml
+++ b/app/src/main/res/layout/layout_onboarding.xml
@@ -16,17 +16,16 @@
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/ob_title"
         android:layout_marginTop="24dp"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
         android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/ob_desc"
-        android:textColor="@color/colorPrimary"
-        android:textSize="14sp"
+        android:textColor="@color/colorSecondary"
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
