--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,14 +33,14 @@
     <style name="AppTheme.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_alignParentTop">true</item>
         <item name="android:layout_alignParentStart">true</item>
-        <item name="startIconTint">@color/colorPrimary</item>
-        <item name="endIconTint">@color/colorPrimary</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="boxCornerRadiusTopStart">16dp</item>
         <item name="boxCornerRadiusTopEnd">16dp</item>
         <item name="boxCornerRadiusBottomStart">16dp</item>
         <item name="boxCornerRadiusBottomEnd">16dp</item>
-        <item name="boxBackgroundColor">@color/colorFieldBG</item>
+        <item name="boxBackgroundColor">@color/colorBackground</item>
+        <item name="startIconTint">@color/colorSecondary</item>
+        <item name="endIconTint">@color/colorSecondary</item>
         <item name="boxStrokeWidth">0dp</item>
         <item name="boxStrokeWidthFocused">0dp</item>
         <item name="hintEnabled">false</item>
@@ -48,13 +48,13 @@
     </style>
 
     <style name="AppTheme.TextInputLayout.Suffix">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@android:color/secondary_text_light_nodisable</item>
+        <item name="android:textColor">@color/colorSecondary</item>
+        <item name="android:textFontWeight">600</item>
     </style>
 
     <style name="AppTheme.TextInputEditText">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textColor">@color/colorSecondary</item>
+        <item name="android:textFontWeight">600</item>
     </style>
 
     <style name="AppTheme.TextInputLabel">
@@ -63,13 +63,12 @@
         <item name="android:layout_marginStart">16dp</item>
         <item name="android:layout_marginEnd">16dp</item>
         <item name="android:textSize">12sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@android:color/secondary_text_light_nodisable</item>
+        <item name="android:textColor">@color/colorPrimaryLight</item>
+        <item name="android:textFontWeight">600</item>
     </style>
 
     <style name="AppTheme.Button.OutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="android:textSize">12sp</item>
-        <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">false</item>
         <item name="strokeColor">@android:color/transparent</item>
         <item name="backgroundTint">@color/btn_outlined_bg</item>
@@ -77,7 +76,6 @@
 
     <style name="AppTheme.Button.UnelevatedButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:textSize">12sp</item>
-        <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">false</item>
         <item name="strokeColor">@android:color/transparent</item>
     </style>
@@ -86,12 +84,12 @@
         <item name="android:theme">@style/AppTheme.NavigationView.Theme</item>
         <item name="itemBackground">@android:color/white</item>
         <item name="itemHorizontalPadding">16dp</item>
-        <item name="itemTextColor">@color/colorText</item>
         <item name="elevation">0dp</item>
         <item name="android:overScrollMode">never</item>
         <item name="itemIconSize">16dp</item>
         <item name="itemIconPadding">24dp</item>
-        <item name="itemIconTint">@color/colorPrimary</item>
+        <item name="itemIconTint">@color/colorSecondary</item>
+        <item name="itemTextColor">@color/colorSecondary</item>
     </style>
 
     <style name="AppTheme.NavigationView.Theme">
@@ -102,9 +100,9 @@
         <item name="android:layout_marginStart">16dp</item>
         <item name="android:layout_marginEnd">16dp</item>
         <item name="android:layout_marginBottom">16dp</item>
-        <item name="android:textColor">@color/colorPrimaryDark</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorSecondary</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="AppTheme.SwitchMaterial">
@@ -115,6 +113,7 @@
         <item name="android:paddingEnd">16dp</item>
         <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorPrimary</item>
+        <item name="android:textFontWeight">600</item>
     </style>
 
     <style name="AppTheme.MaterialAlertDialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
@@ -124,15 +123,17 @@
         <item name="colorAccent">@color/colorPrimary</item>
     </style>
     <style name="AppTheme.MaterialAlertDialog.TitleTextStyle" parent="MaterialAlertDialog.MaterialComponents.Title.Text">
-        <item name="android:textColor">@color/colorPrimaryDark</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textFontWeight">600</item>
     </style>
     <style name="AppTheme.MaterialAlertDialog.PositiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textFontWeight">600</item>
     </style>
     <style name="AppTheme.MaterialAlertDialog.NegativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textFontWeight">600</item>
     </style>
 
     <style name="AppTheme.ProgressDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
