--- a/app/src/main/res/layout/fragment_plasma.xml
+++ b/app/src/main/res/layout/fragment_plasma.xml
@@ -52,4 +52,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/plsmd_nfound"
+        android:visibility="gone"
+        android:layout_gravity="center"
+        android:paddingHorizontal="16dp"
+        android:textColor="@color/colorSecondary"
+        android:text="@string/no_content_found"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
